channel messaging is doneish

--- a/ircd/data/strings.yaml
+++ b/ircd/data/strings.yaml
@@ -18,3 +18,4 @@ already_registered: "You are already registered"
 more_params: "Not enough arguments for that command"
 users_dont_match: "Cannot view or set modes for other users"
 not_on_channel: "You are not on that channel"
+cannot_send: "Cannot send to channel"
