fix validity check for nicknames

--- a/ircd/data/numerics.yaml
+++ b/ircd/data/numerics.yaml
@@ -53,6 +53,7 @@ RPL_LISTSTART: 321
 RPL_LIST: 322
 RPL_LISTEND: 323
 RPL_CHANNELMODEIS: 324
+RPL_CHANNELTSIS: 329
 RPL_NOTOPIC: 331
 RPL_TOPIC: 332
 RPL_INVITING: 341
