--- a/ircd/data/strings.yaml
+++ b/ircd/data/strings.yaml
@@ -13,9 +13,11 @@ unknown_mode: "Received an unknown mode character"
 unknown_nickname: "No such nickname"
 unknown_channel: "No such channel"
 nick_in_use: "Nickname is already in use"
+bad_nickname: "Bad nickname"
 not_registered: "You are not registered"
 already_registered: "You are already registered"
 more_params: "Not enough arguments for that command"
 users_dont_match: "Cannot view or set modes for other users"
 not_on_channel: "You are not on that channel"
+other_not_on_channel: "They are not on that channel"
 cannot_send: "Cannot send to channel"
